fixed rogue character

--- a/data/processed/aoi_info_dict.yaml
+++ b/data/processed/aoi_info_dict.yaml
@@ -92,7 +92,7 @@ Dr. Karolina Ewa Stanczak:
 - ai safety
 - alignment
 - natural language processing
-"Dr. Marina\_Esteban":
+Dr. Marina Esteban:
 - cancer research
 - explainable ai
 - mechanistic modelling
