even more rogue characters

--- a/data/processed/aoi_info_dict.yaml
+++ b/data/processed/aoi_info_dict.yaml
@@ -78,7 +78,7 @@ Dr. Georgios Kissas:
 - data driven model discovery
 - operator learning
 - precision medicine
-"Dr. Gon\xE7alo Guiomar":
+Dr. Gonçalo Guiomar:
 - computational neuroscience
 - external page generative art
 - large language models
@@ -198,7 +198,7 @@ Konstantin Donhauser:
 - machine learning theory and reliability
 - non-parametric and high-dimensional statistics
 - optimization
-"Kristina Nikoli\u0107":
+Kristina Nikolic:
 - ai safety
 - alignment
 - large language models
@@ -244,13 +244,13 @@ Pawel Czyz:
 - computational geometry and topology
 - probabilistic machine learning
 - unsupervised learning
-"Rapha\xEBl Baur":
+Raphaël Baur:
 - ai in architecture
 - human-computer interaction
 - intelligence augmentation
 - probabilistic programming
 - reinforcement learning
-"Ren\xE9 Zurbr\xFCgg":
+René Zurbrügg:
 - 3d scene understanding
 - computer vision
 - embodied ai
